# copier-django-template

./: .gitignore  README.md  copier.yml  pyproject.toml
project/: .env.example  pyproject.toml
project/scripts/: config.py
project/scripts/django/: __init__.py
project/src/config/: asgi.py  env.py  gunicorn.conf.py  wsgi.py
project/src/config/django/: prod.py  test.py
project/src/config/settings/: database.py
project/src/config/urlpatterns/: base.py
project/{{project_name}}/: .gitignore  README.md.jinja
project/{{project_name}}/scripts/: helpers.py
project/{{project_name}}/src/config/django/: base.py  local.py
